# airport/src/main/java/hu/webuni/airport/web/FlightController.java
@@ -1,6 +1,7 @@
 package hu.webuni.airport.web;
 
 import java.lang.reflect.Method;
+import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.Optional;
 
@@ -10,6 +11,7 @@ import org.springframework.core.MethodParameter;
 import org.springframework.data.querydsl.binding.QuerydslPredicate;
 import org.springframework.data.web.querydsl.QuerydslPredicateArgumentResolver;
 import org.springframework.http.ResponseEntity;
+import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.bind.support.WebDataBinderFactory;
 import org.springframework.web.context.request.NativeWebRequest;
@@ -23,6 +25,7 @@ import hu.webuni.airport.mapper.FlightMapper;
 import hu.webuni.airport.model.Flight;
 import hu.webuni.airport.repository.FlightRepository;
 import hu.webuni.airport.service.FlightService;
+import hu.webuni.airport.ws.DelayMessage;
 import lombok.RequiredArgsConstructor;
 
 @RestController
@@ -34,6 +37,8 @@ public class FlightController implements FlightControllerApi{
 	private final FlightRepository flightRepository;
 	private final FlightMapper flightMapper;
 	private final QuerydslPredicateArgumentResolver prediacateResolver;
+	private final SimpMessagingTemplate messagingTemplate;
+
 	
 	@Override
 	public Optional<NativeWebRequest> getRequest() {
@@ -85,6 +90,13 @@ public class FlightController implements FlightControllerApi{
 			e.printStackTrace();
 			throw new RuntimeException(e);
 		}
+	}
+
+	@Override
+	public ResponseEntity<Void> reportDelay(Long id, Integer delay) {
+		this.messagingTemplate.convertAndSend("/topic/delay/" + id, 
+				new DelayMessage(delay, OffsetDateTime.now()));
+		return ResponseEntity.ok().build();
 	}
 
 	
